codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_composer_has_draft_queue_hint_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  tab to queue, ctrl + shift + q to run next                 100% context left  "
